# agamotto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  qemu.patch  setup.sh  syzkaller.patch
configs/syzkaller/: Makefile  agamotto-usb.ar5523.cfg  agamotto-usb.btusb.cfg  agamotto-usb.go7007.cfg  agamotto-usb.mwifiex.cfg  agamotto-usb.pn533.cfg  agamotto-usb.si470x.cfg  agamotto-usb.usx2y.cfg  baseline-usb.ar5523.cfg  baseline-usb.btusb.cfg  baseline-usb.go7007.cfg  baseline-usb.mwifiex.cfg  baseline-usb.pn533.cfg  baseline-usb.rsi.cfg  baseline-usb.si470x.cfg  baseline-usb.usx2y.cfg  snapshot-usb.ar5523.cfg  snapshot-usb.btusb.cfg  snapshot-usb.go7007.cfg  snapshot-usb.mwifiex.cfg  snapshot-usb.pn533.cfg  snapshot-usb.rsi.cfg  snapshot-usb.si470x.cfg  snapshot-usb.usx2y.cfg
guest/: CMakeLists.txt  agamotto.h
guest/linux/: CMakeLists.txt  kernel.patch
guest/linux/agents/: CMakeLists.txt  agent-chkpt.c  agent-debug.sh  agent-dev-prog.sh  agent-exit.c  agent-get-prog.c  agent-next.c  agent.sh
guest/linux/progs/: CMakeLists.txt  prog01.c  prog02.c  prog03.sh  prog04.sh  prog05.sh  prog80.sh  prog81.sh  prog96.sh  prog97.c  prog98.sh
guest/linux/syz/: CMakeLists.txt  executor.c
host/linux/: kernel.patch
libafl/: .gitignore  CMakeLists.txt  libafl.patch  setup.sh
libafl/src/: libafl.c  libafl.h
libagamotto/: CMakeLists.txt
libagamotto/include/: agamotto.h
libagamotto/src/: fuzzer.c  fuzzer.h  intercept.c  kvm.c  kvm.h  snapshot.c  snapshot.h
scripts/: build-image.sh  build-linux-guest.sh  copy-modules.py  copy-modules.sh  create-debian-image.sh  create-overlay-image.py  create-overlay-image.sh  fixup.py  fuzz.py  reset-overlay+fuzz.sh  run-qemu.sh
scripts/seed/: Agamotto
